--- a/solution.tex
+++ b/solution.tex
@@ -22,7 +22,7 @@ Each functional layer can be represented graphically, building on the layer to i
     \label{layers}
 \end{figure}
 \subsection{Infrastructure}
-At the heart of any big data\index{big data} platform is the elastic infrastructure upon which it is built. The concept of both vertical and horizontal elasticity allows the scaling or shrinking of both storage and processing capacity to meet performance requirements and cost efficiency. One method of doing this involves hardware virtualization \index{virtualization} of storage, memory and cpu resources into logical pools that can be assigned or released by services in a pay-per-use model. This allows the various services to acquire more disk space during data ingestion or to request more processors during analytic runs. \textsc{CSC's} BizCloud\index{BizCloud} is a commercial offering built on VMWare \index{VMWare} technology that allows elastic \gls{iaas}\index{IaaS} for its customers \cite{bizcloud}. Another \gls{iaas} popular with technology startups, is the dual offerings of the Xen\index{Xen} based \gls{ec2}\index{EC2} and the \gls{s3}\index{S3} from \gls{aws}\index{AWS}. Regardless of the specific technology used, the infrastructure layer has two fundamental requirements:
+At the heart of any big data\index{big data} platform is the elastic infrastructure upon which it is built. The concept of both vertical and horizontal elasticity allows the scaling or shrinking of both storage and processing capacity to meet performance requirements and cost efficiency. One method of doing this involves hardware virtualization \index{virtualization} of storage, memory and cpu resources into logical pools that can be assigned or released by services in a pay-per-use model. This allows the various services to acquire more disk space during data ingestion or to request more processors during analytic runs. \textsc{CSC's} BizCloud\index{BizCloud} is a commercial offering built on VMWare \index{VMWare} technology that allows elastic \gls{iaas}\index{IaaS} for its customers \cite{bizcloud}. Another \gls{iaas} popular with technology startups is the dual offerings of the Xen\index{Xen} based \gls{ec2}\index{EC2} and the \gls{s3}\index{S3} from \gls{aws}\index{AWS}. Regardless of the specific technology used, the infrastructure layer has two fundamental requirements:
 \begin{itemize}
     \item cost effectiveness in horizontal scaling
     \item ease of adding, requesting, relinquishing resources
