--- a/use_cases.tex
+++ b/use_cases.tex
@@ -7,7 +7,7 @@
 \section{Use Cases}
 Two offerings with sufficiently different data and processing requirements are tornado and flood. While both are similar in the respect that the objective is to produce a probability of occurrence for any given geographic point in the coverage area, the technology required to accomplish this varies greatly. A primary carrier of property and casualty insurance would be very interested in knowing the probability of natural catastrophes in geographic areas in which they have a large customer base. Having accurate probabilities of seasonal event occurrences, months in advance, constitutes a significant business advantage over competitors when issuing or renewing policies.\\
 
-In a \textsc{CSC} meeting with Novarica\index{Novarica}, an insurance industry consulting group, a scenario was laid out and positively received in which insurance underwriters would be given access to an additional data feed that included catastrophic weather event probabilities [personal communication, 2013]. This feed would be ingested into their current toolset, which assists in the decisions related to policy offering and renewal. The probabilistic occurrence of future catastrophic weather events can help insurance companies balance high risk policies with low risk polices in their overall portfolio, in order to maximize revenue. Insurance companies need these long term outlooks, because existing books of business once written, cannot be changed in the short term.
+In a \textsc{CSC} meeting with Novarica\index{Novarica}, an insurance industry consulting group, a scenario was laid out and positively received in which insurance underwriters would be given access to an additional data feed that included catastrophic weather event probabilities [personal communication, 2013]. This feed would be ingested into their current toolset, which assists in the decisions related to policy offering and renewal. The probabilistic occurrence of future catastrophic weather events can help insurance companies balance high risk policies with low risk polices in their overall portfoli in order to maximize revenue. Insurance companies need these long term outlooks, because existing books of business once written, cannot be changed in the short term.
 \subsection{Analytical Offerings}
 Quantitative probabilities for natural catastrophic events such as tornado, hail, or flood can be expressed as a Poisson distribution showing the probability of a given number of events occurring over a fixed interval of time \cite{anderson}. It is possible to represent the resulting Poisson distribution in a number of ways, either textually or graphically. While an interactive \gls{html} geographic map may best present the results visually, the goal is to get the information into a system capable of overlaying it with parcel and policy data, so as to present a complete picture for risk analysis. \textsc{CSC} has two different administration tools for insurance carriers called POINT IN and Exceed which can handle \gls{xml} input feeds containing the event probabilities for each geographic grid location. For the global flood offering, the Integral software package, also from \textsc{CSC}, could serve the same purpose \cite{integral}. \\
 
@@ -54,7 +54,7 @@ As seen in table \ref{qualifiers}, the flood analytic ingests a larger and wider
     \label{qualifiers}
 \end{table}
 \subsection{Velocity, Volume, and Variety}
-The speed at which sets are processed and stored varies with respect to the particular data. Some data sets are generated daily, e.g. \gls{merra}, some are generated monthly, e.g. \gls{soi}, and some require daily parsing, e.g. newspapers, Twitter\index{Twitter}, or other social media. Although the velocity of incoming data varies by type, it is expected that the output analytics for both tornado and flood are generated monthly on a fixed schedule as determined by the specific customer. If a month's worth of data can be pre-processed in a timely manner, there is no reason to move to daily ingestion. Tests were performed on one month of  \gls{merra}\footnote{representative of a larger data feed} and shown that on a single 3GHz core, it takes approximately thirty five minutes to parse and store the data, exclusive of retrieval time. It is not expected that monthly retrieval of the structured data sets will present a problem. The unstructured data sets will need to be gathered on a daily or semi-daily basis in order to stay current. If not retrieved in a timely manner, there is risk of the data disappearing or time spent processing weekly or monthly bulk loads will prove to be prohibitive.\\
+The speed at which sets are processed and stored varies with respect to the particular data. Some data sets are generated daily, e.g. \gls{merra}, some are generated monthly, e.g. \gls{soi}, and some require daily parsing, e.g. newspapers, Twitter\index{Twitter}, or other social media. Although the velocity of incoming data varies by type, it is expected that the output analytics for both tornado and flood are generated monthly on a fixed schedule as determined by the specific customer. If a month's worth of data can be pre-processed in a timely manner, there is no reason to move to daily ingestion. Tests performed on one month of \gls{merra}\footnote{representative of a larger data feed} have shown that on a single 3GHz core it takes approximately thirty five minutes to parse and store the data, exclusive of retrieval time. It is not expected that monthly retrieval of the structured data sets will present a problem. The unstructured data sets will need to be gathered on a daily or semi-daily basis in order to stay current. If not retrieved in a timely manner, there is risk of the data disappearing or time spent processing weekly or monthly bulk loads will prove to be prohibitive.\\
 
 It is possible to store all the necessary data required for the tornado analytic on a 1U server with several one terabyte drives. Many home computers also fall into this category. In contrast, if four drives of four terabytes each were configured in a 1U server, it would require sixty-four servers  (or 1.5 standard racks) to store one petabyte worth of flood related data. Replicating the data for a high availability production environment can add a factor of two or three to these estimates. Clearly, flood data requires capacity that is orders of magnitude greater than that of the tornado data. An important point is that the persistent storage of data could be significantly less than what was needed to pre-process it originally. For example, \gls{merra} files are typically 100 to 300 MB in size, depending on whether they are two or three dimensional. These data files contain variables that may or may not be useful in specific offerings. It is possible that out of over thirty variables, only two or three would actually be used which dramatically reduces the amount of persistent data stored and indexed. The data parsers would know which data they need to permanently store and discard the rest. For this reason, it is crucial that the storage used for pre-processing be elastic to save on costs.\\
 
