--- a/executive_summary.tex
+++ b/executive_summary.tex
@@ -5,6 +5,6 @@
 
 This paper focuses on contrasting the tornado and flood offerings with respect to the attributes associated with big data: velocity, volume, and variety. The hail offering is similar enough in variety to tornado and in volume to flood, that analyzing it separately does not add further insights or value. The computation of tornado probabilities involves running a published algorithm against a relatively small amount of structured data on modest hardware. In short, it does not meet the criteria for big data. Flood probabilities, on the other hand, require substantially larger and more diverse data such as newspaper reports, hydrologic data from stream gauges, and parcel information in addition to rainfall and other climate data. In contrast to the tornado analytic, it does meet several criteria for big data. The minimal platform capable of delivering the tornado probabilities is not capable of offering flood probabilities. Without an investment in big data technology and expertise, the range of ClimatEdge\index{ClimatEdge} offerings will be limited.\\
 
-Next, a reference framework implementation is presented that will allow tornado, flood, and future ClimatEdge\index{ClimatEdge} offerings to scale in processing both large and complex data sets, thus enabling a wider variety of business cases to be developed into offerings. The most important framework characteristic is flexibility in implementation technologies and a loose coupling between the layers. There does not exist a single application or technology capable of addressing every offering scenario, therefore a collection of specific technologies that can be integrated together is presented. As technologies evolve, the goal is to be able to replace any one piece of technology without overly affecting the other layers.\\
+Next, a reference framework implementation is presented that will allow tornado, flood, and future ClimatEdge\index{ClimatEdge} offerings to scale in processing both large and complex data sets, thus enabling a wider variety of business cases to be developed into offerings. The most important framework characteristics are flexibility in implementation technologies and a loose coupling between the layers. There does not exist a single application or technology capable of addressing every offering scenario, therefore a collection of specific technologies that can be integrated together is presented. As technologies evolve, the goal is to be able to replace any one piece of technology without overly affecting the other layers.\\
 
 Finally, three future research ideas around the processing of large data sets are presented. The first relies on a data owner enabling programatic access, but not necessarily analysis, to the data.  The second option focuses on the possible legal implications of results derived from cloning any data sets to local storage. Finally, an approach based on moving the analysis to the provider data center is explored. Each approach has both advantages and disadvantages and is suitable for further research within \textsc{CSC} or as a follow on \gls{cse} thesis.
