--- a/introduction.tex
+++ b/introduction.tex
@@ -14,7 +14,7 @@ During the 2012 calendar year, the United States had eleven separate weather eve
 
 In order to understand offerings for general insurance, the business model must be explored. The following equation can be applied to the general insurance industry: 
 \begin{equation*}
-    Risk = Impact \cdot Probability
+\texttt{Risk} = \texttt{Impact} \cdot \texttt{Probability}
 \end{equation*}
 \textsc{CSC} recognized that without a substantial quantitative update, ClimatEdge\index{ClimatEdge} could not address the probability of events occurring, thus the overall risk could not be established. With a wealth of publicly available climate data from agencies such as \gls{noaa} and the \gls{nasa}, \textsc{CSC} realized a business opportunity existed. A ClimatEdge\index{ClimatEdge} offering based on quantitative analysis of publicly available data targeted towards minimizing risk for the general insurance industry would be a natural fit. The next step was to develop a technical approach to retrieving, storing, and analyzing the wealth of available data. 
 \subsection{Hypothesis}
