Add in a few sentences for NPS relevance.

--- a/executive_summary.tex
+++ b/executive_summary.tex
@@ -1,5 +1,6 @@
 %!TEX root=index.tex
 \newacronym{cse}{CSE}{Certified Solution Executive}
+\newacronym{nps}{NPS}{North American Public Sector}
 \section{Executive Summary}
 \textsc{CSC's} ClimatEdge\texttrademark{}\index{ClimatEdge} offering is focused on providing probabilistic climate analytics using public government data sets. By using various algorithms, both proprietary and public, \textsc{CSC} plans to offer its customers a distinct advantage by allowing strategic business decisions to be made based on probabilistic outlooks in climate and extreme weather. Planned offerings for the general insurance industry include the probability of future tornado, hail, or flood occurrences in a particular geographic grid cell, as well as hail activity in the recent past.\\
 
@@ -7,4 +8,4 @@ This paper focuses on contrasting the tornado and flood offerings with respect t
 
 Next, a reference framework implementation is presented that will allow tornado, flood, and future ClimatEdge\index{ClimatEdge} offerings to scale in processing both large and complex data sets, thus enabling a wider variety of business cases to be developed into offerings. The most important framework characteristics are flexibility in implementation technologies and a loose coupling between the layers. There does not exist a single application or technology capable of addressing every offering scenario, therefore a collection of specific technologies that can be integrated together is presented. As technologies evolve, the goal is to be able to replace any one piece of technology without overly affecting the other layers.\\
 
-Finally, three future research ideas around the processing of large data sets are presented. The first relies on a data owner enabling programatic access, but not necessarily analysis, to the data.  The second option focuses on the possible legal implications of results derived from cloning any data sets to local storage. Finally, an approach based on moving the analysis to the provider data center is explored. Each approach has both advantages and disadvantages and is suitable for further research within \textsc{CSC} or as a follow on \gls{cse} thesis.
+Finally, three future research ideas around the processing of large data sets are presented. The first relies on a data owner enabling programatic access, but not necessarily analysis, to the data.  The second option focuses on the possible legal implications of results derived from cloning any data sets to local storage. The third approach presented revolves around moving the analysis to the provider data center and computing results locally. Taken collectively as a method in analyzing remote data, these approaches offer potential for the \gls{nps} to deliver innovative solutions to Federal agencies. Each approach has both advantages and disadvantages and is suitable for further research within \textsc{CSC} or as a follow on \gls{cse} thesis.
