Remove notes section, add cockcroft presentation as a reference.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2,85 +2,73 @@
     author = {Hamm, Steve},
     title = {{How Big Data Can Boost Weather Forecasting}},
     year = 2013,
-    howpublished = {\url{hhttp://readwrite.com/2013/02/28/how-big-data-can-boost-weather-forecasting}},
-    note = "Online; accessed 1-February-2013"
+    howpublished = {\url{hhttp://readwrite.com/2013/02/28/how-big-data-can-boost-weather-forecasting}}
 }
 @misc {climatedgeurl,
     howpublished = "\url{http://www.csc.com/public_sector/offerings/59474/82693-climatedge_risk_sector_reports}",
     title ={{ClimatEdge Risk-Sector Reports}},
     author = {CSC},
-    year = 2012,
-    note = "Online; accessed 23-December-2012"
+    year = 2012
 }
 @misc{ncdc,
     author = {National Oceanic and Atmospheric Administration},
     title = {{U.S. Tornado Climatology}},
     year = 2013,
-    howpublished = {\url{http://www.ncdc.noaa.gov/oa/climate/severeweather/tornadoes.html}},
-    note = "Online; accessed 15-February-2013; less than 100MB"
+    howpublished = {\url{http://www.ncdc.noaa.gov/oa/climate/severeweather/tornadoes.html}}
 }
 @misc{bom,
     author = {Australian Government},
     title = {{S.O.I. (Southern Oscillation Index) Archives}},
     year = 2013,
-    howpublished = {\url{http://www.bom.gov.au/climate/current/soihtm1.shtml}},
-    note = "Online; accessed 15-February-2013; less than 1MB"
+    howpublished = {\url{http://www.bom.gov.au/climate/current/soihtm1.shtml}}
 }
 @misc{mdisc,
     author = {National Aeronautics and Space Administration},
     title = {{MERRA Data Holdings}},
     year = 2013,
-    howpublished = {\url{http://disc.sci.gsfc.nasa.gov/daac-bin/DataHoldings.pl}},
-    note = "Online; accessed 15-February-2013; less than 100TB"
+    howpublished = {\url{http://disc.sci.gsfc.nasa.gov/daac-bin/DataHoldings.pl}}
 }
 @misc{hdss,
     author = {National Oceanic and Atmospheric Administration},
     title = {{HDSS Access System}},
     year = 2013,
-    howpublished = {\url{http://has.ncdc.noaa.gov/pls/plhas/HAS.FileAppSelect?datasetname=7000}},
-    note = "Online; accessed 15-February-2013; less than 1.6TB"
+    howpublished = {\url{http://has.ncdc.noaa.gov/pls/plhas/HAS.FileAppSelect?datasetname=7000}}
 }
 @misc{jenkins,
     author = {Jenkins},
     title = {{An extendable open source continuous integration server}},
     year = 2013,
-    howpublished = {\url{http://jenkins-ci.org}},
-    note = "Online; accessed 22-February-2013"
+    howpublished = {\url{http://jenkins-ci.org}}
 }
 @misc{cassandra,
     author = {Cassandra},
     title = {{The Apache Cassandra Project}},
     year = 2013,
-    howpublished = {\url{http://cassandra.apache.org}},
-    note = "Online; accessed 24-February-2013"
+    howpublished = {\url{http://cassandra.apache.org}}
 }
 @misc{materialized_views,
     author = {Wikipedia},
     title = {{Materialized Views}},
     year = 2013,
-    howpublished = {\url{http://en.wikipedia.org/wiki/Materialized_view}},
-    note = "Online; accessed 24-February-2013"
+    howpublished = {\url{http://en.wikipedia.org/wiki/Materialized_view}}
 }
 @misc{point_in,
     author = {CSC},
     title = {{POINT IN Development}},
     year = 2013,
-    howpublished = {\url{https://c3.csc.com/groups/point-in-developmen?view=over}},
-    note = "Online; accessed 10-March-2013"
+    howpublished = {\url{https://c3.csc.com/groups/point-in-developmen?view=over}}
 }
 @misc{exceed,
     author = {CSC},
     title = {{Exceed}},
     year = 2013,
-    howpublished = {\url{http://www.csc.com/p_and_c_general_insurance/offerings/26121/57318-exceed}},
-    note = "Online; accessed 20-March-2013"
+    howpublished = {\url{http://www.csc.com/p_and_c_general_insurance/offerings/26121/57318-exceed}}
 }
 @misc{integral,
     author = {CSC},
     title = {{Integral}},
     year = 2013,
-    howpublished = {\url{http://www.csc.com/insurance/offerings/11097/47685-integral}},
-    note = "Online; accessed 20-March-2013"
+    howpublished = {\url{http://www.csc.com/insurance/offerings/11097/47685-integral}}
 }
 @misc{stonebraker,
     author = {Stonebraker, Michael},
@@ -95,58 +83,54 @@
 	title = {{Climatological analysis of tornado report counts using a hierarchical Bayesian spatiotemporal model}},
 	journal = {Journal of Geophysical Research},
 	volume = {108},
-	year = 2003,
+	year = 2003
 }
  @article{mapreduce,
 	author = {Dean, Jeffrey and Sanjay Ghemawat},
 	title = {{MapReduce: Simplified Data Processing on Large Clusters}},
 	journal = {OSDI'04: Sixth Symposium on Operating System Design and Implementation},
-	year = 2004,
+	year = 2004
 }
 @misc{keller1,
     author = {Keller, Christopher N.},
     title = {{MERRA Processing in C}},
     year = 2013,
-    howpublished ={\url{https://github.com/christopherkeller/}},
-    note = "Online; accessed 28-February-2013"
+    howpublished ={\url{https://github.com/christopherkeller/}}
 }
 @misc{keller2,
     author = {Keller, Christopher N.},
     title = {{MapReduce in Python}},
-    year = 2011,
-    note = "Unpublished"
+    year = 2011
 }
 @misc{opencompute,
     author = {Open Compute Project},
     title = {{Hacking Conventional Computing Infrastructure}},
     year = 2011,
     howpublished = {\url{http://www.opencompute.org}},
-    note = "Online; accessed 18-March-2013"
 }
 @misc{xen,
     author = {Xen},
     title = {{Xen Hypervisor}},
     year = 2005,
     howpublished = {\url{http://xen.org/products/xenhyp.html}},
-    note = "Online; accessed 18-March-2013"
 }
 @inproceedings{stalder,
     author = {Stalder, Iwan},
     title = {{Extreme Weather Insurance Risk Management Congress}},
     booktitle = {{Weather the Storms in a World of Change}},
-    year = 2013,
+    year = 2013
 }
 @inproceedings{hope,
     author = {Hope, Clifton S.},
     title = {{Developing Innovative Ways of Assessing Flood To Enable Improved Measurement Of Risk: Unlocking Opportunities For Insuring US Coastal, River and Winter-Storm Related Flood}},
     booktitle = {{Weather the Storms in a World of Change}},
-    year = 2013,
+    year = 2013
 }
 @inproceedings{li,
     author = {Li, Ming},
     title = {{Emerging Markets Flood Risk: better Understand Exposure Across the Overall Portfolio}},
     booktitle = {{Weather the Storms in a World of Change}},
-    year = 2013,
+    year = 2013
 }
 @misc{walker,
     author = {Walker, Dan and Christopher Anderson},
@@ -157,22 +141,19 @@
     author = {CSC},
     title = {{CSC BizCloud Service Definition}},
     year = 2011,
-    howpublished = {CSC C3},
-    note = "Online; accessed 18-March-2013"
+    howpublished = {CSC C3}
 }
 @misc {hdf,
     howpublished = "\url{http://disc.sci.gsfc.nasa.gov/mdisc/data-holdings/merra/merra_products_nonjs.shtml}",
     title ={{MERRA Products}},
     author = {NASA Goddard Earth Science Data and Information Services Center},
-    year = 2013,
-    note = "Online; accessed 4-January-2013"
+    year = 2013
 }
 @misc {quantum,
     title ={{Moving insight into the next dimension}},
     author = {Quantum4D},
     year = 2012,
-    howpublished = "\url{http://www.quantum4d.com}",
-    note = "Online; accessed 24-March-2013"
+    howpublished = "\url{http://www.quantum4d.com}"
 }
 @inbook {fairweather,
     author={Committee on Partnerships in Weather and Climate Services, Committee on Geophysical and Environmental Data, National Research Council},
@@ -198,19 +179,22 @@
     author = {Cetas},
     year = 2012,
     howpublished = "\url{http://www.cetas.net}",
-    note = "Online; accessed 24-March-2013"
 }
 @misc {openstack,
     title ={{OpenStack Open Source Cloud Computing Software}},
     author = {OpenStack},
     year = 2012,
-    howpublished = "\url{http://www.openstack.org}",
-    note = "Online; accessed 25-March-2013"
+    howpublished = "\url{http://www.openstack.org}"
 }
 @misc {pentaho,
     title ={{Big Data Analytics}},
     author = {Pentaho},
     year = 2013,
-    howpublished = "\url{http://www.pentaho.com/big-data/}",
-    note = "Online; accessed 25-March-2013"
+    howpublished = "\url{http://www.pentaho.com/big-data/}"
+}
+@misc {cockcroft,
+    title ={{Replacing Datacenter Oracle with Global Apache Cassandra on AWS}},
+    author = {Cockcroft, Adrian},
+    year = 2011,
+    howpublished = "\url{http://www.slideshare.net/adrianco/migrating-netflix-from-oracle-to-global-cassandra}"
 }
